# menifest

./: .gitignore  Cargo.toml  README.md  creds.txt  example.rs  insert_server.sql  main.db  package.json  pnpm-lock.yaml  run.sh
agent/: Cargo.toml
agent/src/: main.rs
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: main.rs  ssh.rs  structs.rs
backend/src/routes/: server.rs
frontend/: .gitignore  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: ConnectServerModal.tsx  MetricChart.tsx  MetricsPreview.tsx  Status.tsx
shared/: Cargo.toml  lib.rs
shared/src/: lib.rs
src/: main.rs  ssh.rs
