[package]
name = "manifest"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
rand = "0.10.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
russh = "0.60.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.1", features = ["full"] }
ts-rs = "12.0.1"
sha2 = "0.11"
hex = "0.4"
shared = { path = "../shared" }